--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ic-agent = "0.32.0"
-candid = "0.10.1"
+ic-agent = "0.34.0"
+candid = "0.10.6"
 tokio = { version = "1.35.1", features = ["full"] }
-ic-cdk = "0.12.0"
+ic-cdk = "0.13.2"
 serde = "1.0.193"
 serde_bytes = "0.11.12"
+hex = "0.4.3"
